[gd_scene load_steps=5 format=3 uid="uid://bvq3rwhyvky67"]

[ext_resource type="Script" path="res://scripts/solo_game.gd" id="1_8kycf"]
[ext_resource type="AudioStream" uid="uid://cofyamsctdigr" path="res://assets/sounds/African1.mp3" id="2_vkska"]
[ext_resource type="AudioStream" uid="uid://ylgi7uccdx4j" path="res://assets/sounds/liar.wav" id="3_i0qrl"]
[ext_resource type="AudioStream" uid="uid://cle2wu2sjiap2" path="res://assets/sounds/JDSherbert - Ultimate UI SFX Pack - Cursor - 1.mp3" id="4_0tij4"]

[node name="SoloGame" type="Node2D"]
script = ExtResource("1_8kycf")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
offset_right = 800.0
offset_bottom = 600.0
color = Color(0.112164, 0.25186, 0.0513688, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 800.0
offset_bottom = 600.0

[node name="PlayerHand" type="HBoxContainer" parent="Control"]
layout_mode = 1
offset_left = 222.0
offset_top = 481.065
offset_right = 578.0
offset_bottom = 581.065

[node name="BotHand" type="HBoxContainer" parent="Control"]
layout_mode = 1
offset_left = 222.0
offset_top = 10.72
offset_right = 578.0
offset_bottom = 110.72

[node name="DeckArea" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.0
offset_top = -50.0
offset_right = 34.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="chosenCardLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 30.0
offset_top = 257.0
offset_right = 180.0
offset_bottom = 341.0
theme_override_font_sizes/font_size = 56
text = "KING"

[node name="playerLiarLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 554.0
offset_top = 457.0
offset_right = 761.0
offset_bottom = 568.0
theme_override_font_sizes/font_size = 81
text = "LIAR!"

[node name="botLiarLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 560.0
offset_top = 21.0
offset_right = 767.0
offset_bottom = 132.0
theme_override_font_sizes/font_size = 81
text = "LIAR!"

[node name="winLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -374.0
offset_top = -205.33
offset_right = 374.0
offset_bottom = -47.33
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 116
text = "PLAYER WINS"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 650.0
offset_top = 300.0
offset_right = 735.0
offset_bottom = 331.0
text = "CALL LIAR"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_vkska")
volume_db = 8.432

[node name="liarAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_i0qrl")
pitch_scale = 0.9

[node name="dukSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_0tij4")

[connection signal="pressed" from="Control/Button" to="." method="_on_button_pressed"]
